--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/Tera_blog
+    url: jdbc:mysql://svc.sel4.cloudtype.app:30996/tera_blog
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: root
+    username: terauser
+    password: tera1234!
   jpa:
+    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
     show-sql: true
