--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     url: jdbc:mysql://svc.sel4.cloudtype.app:30996/tera_blog
-    driver-class-name: com.mysql.cj.jdbc.Driver
     username: terauser
     password: tera1234!
+
   jpa:
-    database-platform: org.hibernate.dialect.MariaDBDialect
+    open-in-view: false
     hibernate:
       ddl-auto: update
     show-sql: true
