--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
     show-sql: true
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQLDialect
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
